- update testrun view - add testdata and screenshots to steps - provide testplans